bc planning+geoadmin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,6 @@ spring.mail.from=redcargademo@gmail.com
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.eclipse.angus.mail=DEBUG
-spring.mail.test-connection=true
+spring.mail.test-connection=false
 
 stubs.enabled=true
