--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=redcarga
+spring.profiles.active=dev
 
 # === Datasource (PostgreSQL) ===
 spring.datasource.url=jdbc:postgresql://localhost:5432/redcarga
-spring.datasource.username=redcarga
-spring.datasource.password=mimimisolmiremidodoremisolresidola
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA / Hibernate ===
