--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 # === Datasource (PostgreSQL) ===
 spring.datasource.url=jdbc:postgresql://localhost:5432/redcarga
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=Mema05022704
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA / Hibernate ===
