--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,18 @@ logging.level.org.eclipse.angus.mail=DEBUG
 spring.mail.test-connection=false
 
 stubs.enabled=true
+
+# === WS Infra ===
+# redcarga.ws.allowed-origins=https://app.clientes.redcarga.com,https://app.proveedores.redcarga.com,http://localhost:5173
+redcarga.ws.allowed-origins=*,http://localhost:*,http://127.0.0.1:*
+redcarga.ws.heartbeat.server-ms=10000
+redcarga.ws.heartbeat.client-ms=10000
+redcarga.ws.message-size.max-bytes=65536
+
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+logging.level.com.app.redcarga=DEBUG
+
+# Presets por defecto (no sensibles)
+media.cloudinary.presets.request-item-photo=rc_item_signed
+media.cloudinary.presets.provider-logo=rc_logo_signed
