--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,4 +10,9 @@ redcarga.measurements.base-url=http://localhost:8000
 redcarga.measurements.timeout-ms=15000
 redcarga.measurements.min-confidence=0.75
 
+# CLOUDINARY (para gestión de imágenes)
+media.cloudinary.apiKey=tu_api_key_aqui
+media.cloudinary.apiSecret=tu_api_secret_aqui
+media.cloudinary.cloudName=tu_cloud_name_aqui
+
 spring.config.import=optional:file:.secrets/application-local.properties
