--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,11 @@ logging.level.com.app.redcarga=DEBUG
 # Presets por defecto (no sensibles)
 media.cloudinary.presets.request-item-photo=rc_item_signed
 media.cloudinary.presets.provider-logo=rc_logo_signed
+
+requests.outbox.match.enabled=true
+requests.outbox.match.batch-size=50
+requests.outbox.match.lease=30s
+requests.outbox.match.backoff=30s
+requests.outbox.match.max-attempts=8
+requests.outbox.match.cron=*/5 * * * * *
+requests.outbox.match.also-fire-after-commit=true
