feat: add get all requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.profiles.active=dev
 
 # === Datasource (PostgreSQL) ===
 spring.datasource.url=jdbc:postgresql://localhost:5432/redcarga
-spring.datasource.username=redcarga
-spring.datasource.password=mimimisolmiremidodoremisolresidola
+spring.datasource.username=postgres
+spring.datasource.password=Mema05022704
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA / Hibernate ===
